# trkenv

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  DEV_DOCS.md  Makefile  README.md  SERVER_STARTERS_README.md  check_artifacts.py  check_db.py  check_job.py  dev-requirements.txt  package-lock.json  pytest.ini  requirements.txt  start-server.bat  start-server.ps1  test_upload.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  e2e.yml  pytest.yml
.venv_test/: pyvenv.cfg
apps/desktop-juce/: CMakeLists.txt  README.md
apps/desktop-juce/Source/: Main.cpp
apps/server/: main.py  requirements.txt
datasets/drafts/: 01f2d600dfc1.json  6ef9b2f8f679.json  797e10c68bca.json  cb453bed57ba.json  e275a2659e60.json  fa63679b4189.json  fbf37bc001a9.json
experiments/audio-engine/: manifest.json
profiles/: default.yml  hello.yaml  jam.yml  rehearsal.yaml
schemas/: flow.schema.json.src
scripts/: README.md  _health_check.py  bootstrap.ps1  build.ps1  cache_lyrics_from_work.py  clean_runs.ps1  cleanup_runs.ps1  dev-backend.sh  import_beatles.py  quality_check.ps1  refactor_to_lab.ps1  resilience_probe.py  run_all_checks.ps1  run_resilience.ps1  run_server.ps1  run_smoke.ps1  run_smoke_runner.ps1  setup_dev.ps1  setup_local.sh  smoke_api.py  smoke_test_client.py  test_db_last_song.py  test_publish_endpoint.py  test_publish_session.py  trk_doctor.ps1  validate.py  wait-for-backend.sh
services/: song_index.py
services/audio_wrapper/: wrapper.py
services/flow/: runner.py
services/io/: adapters.py
services/lyrics_source/: __init__.py  convert.py  index.py  lrclib.py
services/sdk_py/: base.py
src/: main.cpp
src/adapters/: audio_adapter.cpp  audio_adapter.h  data_adapter.cpp  data_adapter.h
src/core/: microkernel.cpp  microkernel.h  plugin_host.cpp  plugin_host.h  plugin_registry.cpp  plugin_registry.h
src/database/: database_stubs.cpp  database_stubs.h  sqlite_repository.cpp  sqlite_repository.h
src/flow/: dag_processor.cpp  dag_processor.h  execution_engine.cpp  execution_engine.h  flow_node.cpp  flow_node.h
tests/: test_no_pydantic_dict_usage.py  test_palette_api.py  test_palette_models.py  test_palettes.py  test_smoke.py
trk_theme_kit/scripts/: add_theme_endpoints.ps1
webapp/: DESIGN_SYSTEM.md
webapp/app/: README.md  STORYBOOK_README.md  THEME_CHANGES.md  THEME_EDITOR_README.md  build-log.txt  error.tsx  loading.tsx  middleware.ts  next.config.js  npm_server.err  package-lock.json  package.json  postcss.config.js  server.err  tailwind.config.js  tailwind.config.ts  tsconfig.json  (+1 more)
(+344 files in other folders)
